Add editorconfig file and reformat
Also changed the default comment for all conversions providers